task2 - исправление замечаний